# typstnique

./: .editorconfig  .editorconfig-checker.json  .gitignore  Cargo.toml  LICENSE-MIT  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
assets/: problems.toml
crates/app/: Cargo.toml
crates/app/src/: game.rs  lib.rs  pages.rs  problems.rs  server_fns.rs
crates/app/src/pages/: home.rs  leaderboard.rs  mod.rs  play.rs  practice.rs  problems.rs
crates/app/tests/: problem_renders.txt
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/typst-engine/: Cargo.toml  build.rs
crates/typst-engine/examples/: font_sweep.rs  gen_problems.rs
crates/typst-engine/src/: lib.rs
migrations/: 0001_init.sql  0002_solves.sql  0003_practice_sets.sql  0004_solves_paste_chars.sql  0005_backfill_points.sql
nix/: module.nix
public/: theme-init.js
style/: main.scss
