[workspace]
resolver = "2"
members = [
    "crates/typst-engine",
    "crates/app",
    "crates/frontend",
    "crates/server",
]

# Shared package metadata; each crate opts in with `<field>.workspace = true`.
[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
app = { path = "crates/app" }
typst-engine = { path = "crates/typst-engine" }

# Leptos (default-features disabled; each crate turns on hydrate/ssr)
leptos = { version = "0.8", default-features = false }
leptos_axum = { version = "0.8" }
leptos_meta = { version = "0.8", default-features = false }
leptos_router = { version = "0.8", default-features = false }

# Server stack
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-gzip"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }

# Shared
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "=0.2.121"
console_error_panic_hook = "0.1"

# Logging
log = "0.4"                     # client → browser console (via console_log)
console_log = "1"
tracing = "0.1"                 # server → structured, span-based logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Session / request identifiers
uuid = { version = "1", features = ["v4"] }

# Build profiles -------------------------------------------------------------
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

# cargo-leptos configuration -------------------------------------------------
[[workspace.metadata.leptos]]
name = "typstnique"
bin-package = "server"
lib-package = "frontend"

site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001

bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
