[package]
name = "app"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
typst-engine = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
toml = "0.8"
# `Storage` for theme persistence; `HtmlTextAreaElement` for the editor.
web-sys = { version = "0.3", features = ["Storage", "HtmlTextAreaElement"] }
js-sys = "0.3"

# server-only (SSR) dependencies
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
rand = { version = "0.8", optional = true }
uuid = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# client-only (hydrate) dependencies
wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
console_log = { workspace = true, optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:console_log",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:sqlx",
    "dep:rand",
    "dep:uuid",
    "dep:tracing",
]
