[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { workspace = true, features = ["hydrate"] }
leptos = { workspace = true, features = ["hydrate"] }
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
