[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
app = { workspace = true, features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
